finished the backup command

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "nesbot/carbon": "1.22.1",
         "roave/security-advisories": "dev-master",
         "symfony/console": "^3.3",
+        "symfony/filesystem": "^3.3",
         "symfony/finder": "^3.3",
         "symfony/process": "^3.3",
         "symfony/stopwatch": "^3.3",
-        "symfony/yaml": "^3.3"
+        "symfony/yaml": "^3.3",
+        "tightenco/collect": "^5.4"
     },
     "license": "MIT",
     "authors": [
