--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "This is just a small CLI app which will create a backup from your database",
     "type": "project",
     "require": {
+        "php": ">=7.0.0",
         "league/flysystem": "^1.0",
         "nesbot/carbon": "1.22.1",
         "roave/security-advisories": "dev-master",
