--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "require": {
         "php": ">=7.0.0",
         "nesbot/carbon": "1.22.1",
-        "symfony/console": "^3.3",
-        "symfony/filesystem": "^3.3",
-        "symfony/finder": "^3.3",
-        "symfony/process": "^3.3",
-        "symfony/stopwatch": "^3.3",
-        "symfony/yaml": "^3.3",
-        "tightenco/collect": "^5.4"
+        "symfony/console": "^4.0",
+        "symfony/filesystem": "^4.0",
+        "symfony/finder": "^4.0",
+        "symfony/process": "^4.0",
+        "symfony/stopwatch": "^4.0",
+        "symfony/yaml": "^4.0",
+        "tightenco/collect": "^5.6"
     },
     "license": "MIT",
     "authors": [
@@ -21,7 +21,7 @@
         }
     ],
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.3",
+        "friendsofphp/php-cs-fixer": "@stable",
         "pds/skeleton": "~1.0",
         "roave/security-advisories": "dev-master"
     },
