add composer install

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           php-version: '7.4'
 
+      - name: Composer install
+        run: composer install
+
       - name: Determine tag
         id: determine-tag
         run: echo \"::set-output name=tag::${GITHUB_REF#refs/tags/}\"
