--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Determine tag
         id: determine-tag
-        run: echo \"::set-output name=tag::${GITHUB_REF#refs/tags/}\"
+        run: echo "\"::set-output name=tag::${GITHUB_REF#refs/tags/}\""
       
       - name: Build project
         run: php -d phar.readonly=false ./vendor/bin/box compile
