--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -13,6 +13,12 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    strategy:
+      fail-fast: true
+      max-parallel: 15
+      matrix:
+        php-versions: ['7.4']
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -20,14 +26,16 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: ${{ matrix.php-versions }}
+
+     - name: Cache dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.composer/cache/files
+          key: php-${{ matrix.php-versions }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Composer install
         run: composer install  --prefer-dist --no-progress --no-suggest
-
-      - name: Determine tag
-        id: determine-tag
-        run: echo "\"::set-output name=tag::${GITHUB_REF#refs/tags/}\""
       
       - name: Build project
         run: php -d phar.readonly=false ./vendor/bin/box compile
@@ -40,8 +48,8 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ steps.determine-tag.outputs.tag }}
-          tag_name: ${{ steps.determine-tag.outputs.tag }}
+          release_name: ${{ github.ref }}
+          tag_name: ${{ github.ref }}
 
       - name: Upload Release Asset
         id: upload-release-asset 
