--- a/.github/workflows/continuous-release.yml
+++ b/.github/workflows/continuous-release.yml
@@ -38,7 +38,7 @@ jobs:
         run: composer install  --prefer-dist --no-progress --no-suggest
       
       - name: Build project
-        run: php -d phar.readonly=false ./vendor/bin/box compile
+        run: composer run build
 
       - name: Create release
         id: create_release
