--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         }
     },
     "scripts": {
-        "build": "php -d phar.readonly=false ./vendor/bin/box compile",
+        "build": "php -d phar.readonly=false ./vendor/bin/box compile"
     },
     "bin" : ["bin/backup"],
     "minimum-stability": "stable"
