--- a/.github/workflows/continuous-release.yml
+++ b/.github/workflows/continuous-release.yml
@@ -35,10 +35,10 @@ jobs:
           key: php-${{ matrix.php-versions }}-composer-${{ hashFiles('composer.json') }}          
 
       - name: Composer install
-        run: composer install  --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Install additional dependencies
-        run: composer require league/flysystem league/flysystem-aws-s3-v3 spatie/flysystem-dropbox
+        run: composer require --prefer-dist --no-progress --no-suggest league/flysystem league/flysystem-aws-s3-v3 spatie/flysystem-dropbox
       
       - name: Build project
         run: composer run build
